# QuantitaveTradingSystem

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
include/: DataFetcher.h  Database.h  PerformanceEvaluator.h  RandomForestStrategy.h  SimpleMovingAverageStrategy.h  TradeExecutor.h
src/: DataFetcher.cpp  Database.cpp  PerformanceEvaluator.cpp  RandomForestStrategy.cpp  SimpleMovingAverageStrategy.cpp  TradeExecutor.cpp
